# spline_tree_sim

./: .gitignore  CMakeLists.txt  README.md
01-branch/: CMakeLists.txt  main.cpp  world.urdf
02-simple_tree/: CMakeLists.txt  SplineContact.h  main.cpp  world.urdf
03-bare_tree/: CMakeLists.txt  SplineContact.h  TreeParser.h  large_tree.xml  main.cpp  small_tree.xml  world.urdf
scripts/: derivative_tests.py
src/: BranchKinematic.h  Fruit.h  LCPSolver.cpp  LCPSolver.h  QuadraticSplineDynamic.h  QuadraticSplineKinematic.cpp  QuadraticSplineKinematic.h  QuadraticSplineVisual.cpp  QuadraticSplineVisual.h  TreeKinematic.cpp  TreeKinematic.h  TreeVisual.h
